@@ -3,6 +3,8 @@
 	been working for a dozen years.
 	* src/winio.c (statusbar): Update the screen immediately whenever a
 	message has been posted on the status bar.
+	* src/winio.c (statusbar), src/nano.c (do_input): Turn the cursor off
+	when writing in the status bar, and on when waiting for	input.
 
 2016-02-05  Benno Schulenberg  <bensberg@justemail.net>
 	* doc/texinfo/nano.texi: Condense the descriptions of command-key
